--- a/about.html
+++ b/about.html
@@ -17,6 +17,7 @@
                 <li><a href="#about">About Me</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li><a href="#hire">Hire Me</a></li>
+                <li><a href="#boss">Boss</a></li>
                 <li><a href="path/to/your/cv.pdf" download>Download CV</a></li>
             </ul>
         </div>
